# gnn

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
configs/: FreeSolv.yml  Tg.yml
data/processed/: FreeSolv.csv  Tg.csv
data/raw/: Tg.csv
model/Tg/: all_params.yaml  model_params.pth
notebook/: 2_training.ipynb  3_inference.ipynb
notebooks/: 1_preprocessed.ipynb  2_training.ipynb  3_predict.ipynb
reports/Tg/bayes_opt/trial_0/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_1/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_10/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_11/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_12/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_13/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_14/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_15/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/bayes_opt/trial_16/: fold0_metrics.csv  fold1_metrics.csv  fold2_metrics.csv
reports/Tg/model/: all_params.yaml  model_params.pth
reports/Tg/training/: metrics.csv
scripts/: 1_preprocessed.ipynb  2_training.ipynb
src/gnn/: data.py  evaluate.py  inference.py  model.py  mol2graph.py  plot.py  train.py  trainer.py  utils.py
src/gnn/modeling/: predict.py  train.py
(+63 files in other folders)
