[project]
name = "gnn"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torch-geometric==2.3.0",
    "torchmetrics>=1.7.1",
    "scikit-learn>=1.6.1",
    "rdkit>=2024.9.6",
    "pyyaml>=6.0.2",
    "polars>=1.27.1",
    "optuna>=4.3.0",
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"
